start fixing layout alignments

--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -20,17 +20,17 @@ label, input, button {
   width: 100%;
 }
 .two-fields-container {
-  display: flex;
-  margin: 0 auto;
-  &>* {
-    flex: 1;
-  }
-  &>*:first-child {
-    margin-right: 15px;
-  }
-  &>*:last-child {
-    margin-left: 15px;
-  }
+  // display: flex;
+  // margin: 0 auto;
+  // &>* {
+  //   flex: 1;
+  // }
+  // &>*:first-child {
+  //   margin-right: 15px;
+  // }
+  // &>*:last-child {
+  //   margin-left: 15px;
+  // }
 }
 form {
   margin: 0 auto;
